--- a/js/function_plots.v01.html
+++ b/js/function_plots.v01.html
@@ -16,7 +16,14 @@
         document.write("<canvas id=\"myCanvas1\" width=\"750px\" height=\"200px\" style=\"border: 1px solid gray;\"></canvas>");        
         graph(sales, "Sales", "myCanvas1");
         
-        const PI = Math.PI;
+        const PI = Math.PI; // This allows us to calculate Pi once, and store it in a "const"
+
+        /**
+         * SCOPE: var, let, and const are variables with different "scopes"
+         ** var is a global variable, so it can be accessed anywhere in your program
+         ** let is a local variable, and can only be accessed inside the BLOCK of code you're using it in (squiggly brackets)
+         ** const is also a variable but is a constant (does not change)
+        **/
 
         var myArray = [];
         for (let i = 0; i < 100; i++) {
@@ -38,34 +45,45 @@
         graph(randomNum, "Random Numbers", "myCanvas3");      
 
         function graph(list, listName, canvasId) {
+            /**
+             *  We want our graph() function to accomplish this stuff:
+                    1. Scale all of our array values between teh X- and Y- dimensions of our canvas
+                    2. Graph the curve between array values onto our <canvas>, no matter what its dimensions are, how many array values we have, or how low or high the array values are
+                    3. Print the values to the console
+            **/
+
             // SETUP
-            var canvas = document.getElementById(canvasId);
-            var theContext = canvas.getContext("2d");
-            var width = canvas.width;
-            var height = canvas.height;
-            var inputMin = Math.min(...list);
-            var inputMax = Math.max(...list);
+            // Connect our array values to the <canvas> and calculate initial values
+            var canvas = document.getElementById(canvasId); // Identify the function plot area
+            var theContext = canvas.getContext("2d"); // Context means the properties of the canvas element onto which all of our drawing takes place
+            var width = canvas.width; // Get the width dimension of <canvas>
+            var height = canvas.height; // Get the height dimension of <canvas>
+            var inputMin = Math.min(...list); // Calculate the lowest value in the array (... is "spread syntax"; it expands the .min() method to each element of the array)
+            var inputMax = Math.max(...list); // The largest value in the array using same methodology...
 
             // SCALE
-            var scale = (num, in_min, in_max, out_min, out_max) => {
+            // Convert input values into <canvas> values, no matter its dimensions
+            var scale = (num, in_min, in_max, out_min, out_max) => { // Create a scalar for inptu and new output ranges using an ARROW FUNCTION (shorter function syntax since ES6 (2015))
                 return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
             }
-            var myList = list.map(n => scale(n, inputMin, inputMax, 0, height));
+            var myList = list.map(n => scale(n, inputMin, inputMax, 0, height)); // Map input list onto new range of <canvas> valus, collect inside a new list called myList
             const myListLength = myList.length;
-            var offset = (1 / (myListLength - 1)) * width;
+            var offset = (1 / (myListLength - 1)) * width; // Calculate the distance between each point on the x-axis; divide the width dimension into EQUAL PARTS
 
             // GRAPH
+            // Draw lines between each value inside the <canvas> area
             theContext.fillStyle = "#AAF5C6";
-            theContext.fillRect(0, 0, width, height);
-            theContext.strokeRect(0, 0, width, height);
-            theContext.moveTo(0, myList[0]);
-            theContext.beginPath();
+            theContext.fillRect(0, 0, width, height); // Fill rectangle with specified color value on the line above
+            theContext.strokeRect(0, 0, width, height); // Draw the bounding box
+            theContext.moveTo(0, myList[0]); // Move the "drawing pen" to the 1st point to be drawn
+            theContext.beginPath(); // Begin drawing! use the for loop below to draw a line between each value in the list!
             for (let i = 0; i < myListLength; i++) {
-                theContext.lineTo(i * offset, height - myList[i]);
+                theContext.lineTo(i * offset, height - myList[i]); // myList[x] means each element of the array at index x (So, x = 0 means the 1st value in the array)
             }
             theContext.stroke();
 
             // PRINT
+            // Write array values to the webpage
             console.log(listName + ": " + list);
             console.log("My List: " + myList);
         }
